xperters/xperters-admin/aks/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    app: xperters-admin-api
  name: xperters-admin-api
  namespace: xperters
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xperters-admin-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xperters-admin-api
    spec:
      containers:
      - image: mercle.azurecr.io/xperters-admin-api:#{tagBuildId}#
        imagePullPolicy: IfNotPresent
        name: xperters-admin-api
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "400Mi"
            cpu: "500m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: acr-auth
