xperters/xperters-admin/aks/api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: xpertersapisvc
  namespace: xperters
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: xperters-admin-api
